Add decentralized peer discovery with ephemeral Cloudflare tunnels
Replace static server list with per-node server.json published to GitHub
Pages on startup. Peers discover each other via peers.json URLs. start.sh
handles tunnel URL detection and publishing via gh API.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,11 @@ services:
     ports:
       - "8080:80"
     restart: unless-stopped
+
+  cloudflared:
+    image: cloudflare/cloudflared:latest
+    container_name: cloudflared
+    command: tunnel --no-autoupdate --url http://synapse:8008
+    depends_on:
+      - synapse
+    restart: unless-stopped
