Fix Pages deployment, verbose Makefile, add docs
- Switch gh-setup to use PUT (not just POST) so it works when Pages already exists
- Makefile: remove @ prefixes for verbose output, add publish/tunnel/tunnel-url targets
- Makefile: use jq for JSON payloads in publish (fixes shell quoting issues)
- Workflow: generate config.json at build time with tunnel URL from server.json
- home.html: add "Open Element" link when viewed standalone
- Add docs/ with architecture, setup guide, and operations reference
- Update README with new commands

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -39,6 +39,16 @@ jobs:
           cp server.json build/
           cp peers.json build/
 
+      - name: Generate config.json with current tunnel URL
+        run: |
+          TUNNEL_URL=$(jq -r .url server.json)
+          echo "Tunnel URL from server.json: $TUNNEL_URL"
+          jq --arg url "$TUNNEL_URL" \
+            '.default_server_config["m.homeserver"].base_url = $url | .default_server_config["m.homeserver"].server_name = $url' \
+            element-config/config.json > build/config.json
+          echo "Generated config.json:"
+          cat build/config.json
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
