--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,15 +23,7 @@ services:
   cloudflared:
     image: cloudflare/cloudflared:latest
     container_name: cloudflared
-    volumes:
-      - ./runtime:/runtime
-    entrypoint: ["/bin/sh", "-c"]
-    command:
-      - |
-        cloudflared tunnel --no-autoupdate --url http://synapse:8008 2>&1 \
-          | tee /dev/stderr \
-          | grep --line-buffered -oP 'https://[a-zA-Z0-9-]+\.trycloudflare\.com' \
-          | while read url; do echo "$url" > /runtime/tunnel-url; done
+    command: ["tunnel", "--no-autoupdate", "--url", "http://synapse:8008"]
     depends_on:
       - synapse
     restart: unless-stopped
@@ -40,12 +32,13 @@ services:
     build: ./tunnel-watcher
     container_name: tunnel-watcher
     volumes:
-      - ./runtime:/runtime:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     environment:
       - GITHUB_TOKEN=${GITHUB_TOKEN}
       - GITHUB_REPO=${GITHUB_REPO}
       - NODE_NAME=${NODE_NAME}
       - POLL_INTERVAL=${POLL_INTERVAL:-60}
+      - CLOUDFLARED_CONTAINER=cloudflared
     depends_on:
       - cloudflared
     restart: unless-stopped
